Algunos cambios esteticos y agregué la barra horizontal a partir de 375px con mediaquerys

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
                 <h1>Social Media Dashboard</h1>
                 <p class="tittle-followers">Total Followers: 23,004</p>
             </div>
-
+            <hr class="hr-top">
             <div class="button-text">
                 <div class="button-items">
                     <div class="button-name">
-                        <p>Dark mode</p>
+                        <p class="button-name-dark">Dark mode</p>
                     </div>
-                    <button class="button"></button>
+                    <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+
                 </div>
             </div>
         </div>
