--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
-<body>
-    <section class="container">
-        <div class="dashboard-title-items">
 
-            <div class="tittle-items">
+<body onload="iniciar()">
+    <section class="container">
+        <div id="dashboard" class="dashboard-title-items">
+
+            <div id="dashboard-tittle" class="tittle-items">
                 <h1>Social Media Dashboard</h1>
                 <p class="tittle-followers">Total Followers: 23,004</p>
             </div>
@@ -26,7 +27,7 @@
                     <div class="button-name">
                         <p class="button-name-dark">Dark mode</p>
                     </div>
-                    <label class="switch">
+                    <label id="button" class="switch">
                             <input type="checkbox">
                             <span class="slider round"></span>
                         </label>
@@ -34,11 +35,11 @@
                 </div>
             </div>
         </div>
-        <div class="widgets-container">
+        <div id="bg-dark" class="widgets-container">
 
-            <div class="card">
+            <div id="card-hover" class="card">
 
-                <div class="cards facebook">
+                <div id="card-bg-facebook" class="cards facebook">
                     <div class="card-body">
                         <div class="card-icon-name">
                             <i class="icon-top"><img
@@ -55,7 +56,7 @@
 
                 </div>
 
-                <div class="cards twitter">
+                <div id="card-bg-twitter" class="cards twitter">
                     <div class="card-body">
                         <div class="card-icon-name">
                             <i class="icon-top"><img
@@ -71,7 +72,7 @@
 
 
                 </div>
-                <div class="cards instagram">
+                <div id="card-bg-instagram" class="cards instagram">
                     <div class="card-body">
                         <div class="card-icon-name">
                             <i class="icon-top"><img
@@ -88,7 +89,7 @@
 
                 </div>
 
-                <div class="cards youtube">
+                <div id="card-bg-youtube" class="cards youtube">
                     <div class="card-body">
                         <div class="card-icon-name">
                             <i class="icon-top"><img
@@ -105,90 +106,87 @@
                 </div>
             </div>
 
-            <div class="footer-card-name">
+            <div id="footer-tittle" class="footer-card-name">
                 <h1>Overview - Today</h1>
             </div>
 
             <div class="card-footer">
-                <div class="cards card-footer-item">
 
+                <div id="card-bottom-1" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Page Views </h1>
-                        <i><img
-                                    src="./images/icon-facebook.svg" alt=""></i>
+                        <i><img src="./images/icon-facebook.svg" alt=""></i>
                     </div>
-
                     <div class="card-footer-number">
                         <h2>87</h2>
                     </div>
                     <h3 class="number number-bottom card-footer-percentage">3%</h3>
                 </div>
-                <div class="cards card-footer-item">
+
+
+                <div id="card-bottom-2" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Likes </h1>
-                        <i><img
-                                    src="./images/icon-facebook.svg" alt=""></i>
+                        <i><img src="./images/icon-facebook.svg" alt=""></i>
                     </div>
-
                     <div class="card-footer-number">
                         <h2>52</h2>
                     </div>
                     <h3 class="number number-bottom card-footer-percentage">2%</h3>
                 </div>
-                <div class="cards card-footer-item">
 
+                <div id="card-bottom-3" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Likes </h1>
-                        <i><img
-                                    src="./images/icon-instagram.svg" alt=""></i>
+                        <i><img src="./images/icon-instagram.svg" alt=""></i>
                     </div>
                     <div class="card-footer-number">
                         <h2>5462</h2>
                     </div>
                     <h3 class="number number-bottom card-footer-percentage">2257%</h3>
                 </div>
-                <div class="cards card-footer-item">
+
+                <div id="card-bottom-4" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Profile Views
                         </h1>
-                        <i><img
-                                    src="./images/icon-instagram.svg" alt=""></i>
+                        <i><img src="./images/icon-instagram.svg" alt=""></i>
                     </div>
                     <div class="card-footer-number">
                         <h2>52k</h2>
                     </div>
                     <h3 class="number number-bottom card-footer-percentage">1375%</h3>
                 </div>
-                <div class="cards card-footer-item">
+
+                <div id="card-bottom-5" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Retweets
                         </h1>
-                        <i><img
-                                    src="./images/icon-twitter.svg" alt=""></i>
+                        <i><img src="./images/icon-twitter.svg" alt=""></i>
                     </div>
                     <div class="card-footer-number">
                         <h2>117</h2>
                     </div>
                     <h3 class="number number-bottom card-footer-percentage">303%</h3>
                 </div>
-                <div class="cards card-footer-item">
+
+                <div id="card-bottom-6" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Likes
                         </h1>
-                        <i><img
-                                    src="./images/icon-twitter.svg" alt=""></i>
+                        <i><img src="./images/icon-twitter.svg" alt=""></i>
                     </div>
                     <div class="card-footer-number">
                         <h2>507</h2>
                     </div>
                     <h3 class="number number-bottom card-footer-percentage">553%</h3>
                 </div>
-                <div class="cards card-footer-item">
+
+                <div id="card-bottom-7" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Likes
                         </h1>
-                        <i><img
-                                    src="./images/icon-youtube.svg" alt=""></i>
+                        <i><img src="./images/icon-youtube.svg" alt=""></i>
                     </div>
                     <div class="card-footer-number">
                         <h2>107</h2>
@@ -196,12 +194,12 @@
                     <h3 class="number-red number-bottom
                             card-footer-percentage">19%</h3>
                 </div>
-                <div class="cards card-footer-item">
+
+                <div id="card-bottom-8" class="cards card-footer-item">
                     <div class="card-icon-title">
                         <h1 class="card-footer-description">Total Views
                         </h1>
-                        <i><img
-                                    src="./images/icon-youtube.svg" alt=""></i>
+                        <i><img src="./images/icon-youtube.svg" alt=""></i>
                     </div>
                     <div class="card-footer-number">
                         <h2>1407</h2>
@@ -218,7 +216,7 @@
 
 
 
-
+    <script src="./assets/index.js"></script>
 
 
 
@@ -230,6 +228,7 @@
                 Name
                 Here</a>.
     </div>
+
 </body>
 
 </html>
